--- a/nested_forms/app/views/characters/new.erb
+++ b/nested_forms/app/views/characters/new.erb
@@ -1,1 +1,14 @@
-This is the new.erb file
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Create Character. Bitches</title>
+  </head>
+  <body>
+    <form action="/characters" method="post">
+      <input type="text" name="name" placeholder="Character Name">
+      <br></br>
+      <input type="submit" value="Make New">
+    </form>
+  </body>
+</html>
